--- a/environment.yml
+++ b/environment.yml
@@ -1,32 +1,97 @@
-name: project_template
+name: python_data_mistakes
 channels:
+  - http://rssregistry.roche.com:8081/artifactory/api/conda/conda
+  - bioconda
+  - conda-forge
   - defaults
 dependencies:
-  - ca-certificates=2019.1.23=0
-  - certifi=2019.3.9=py37_0
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=8.2.0=hdf63c60_1
-  - libstdcxx-ng=8.2.0=hdf63c60_1
-  - ncurses=6.1=he6710b0_1
-  - openssl=1.1.1b=h7b6447c_1
-  - pip=19.1=py37_0
-  - python=3.7.3=h0371630_0
-  - readline=7.0=h7b6447c_5
-  - setuptools=41.0.1=py37_0
-  - sqlite=3.28.0=h7b6447c_0
-  - tk=8.6.8=hbc83047_0
-  - wheel=0.33.1=py37_0
-  - xz=5.2.4=h14c3975_4
-  - zlib=1.2.11=h7b6447c_3
-  - pip:
-    - chardet==3.0.4
-    - conda==4.3.16
-    - conda-autoenv==0.1
-    - idna==2.8
-    - pycosat==0.6.3
-    - requests==2.21.0
-    - ruamel-yaml==0.15.94
-    - urllib3==1.24.3
-prefix: /home/jmsung/miniconda/envs/project_template
+  - appnope=0.1.2=py38h50d1736_2
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py38h96a0964_1
+  - asttokens=2.0.5=pyhd8ed1ab_0
+  - attrs=21.4.0=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - black=21.12b0=pyhd8ed1ab_0
+  - bleach=4.1.0=pyhd8ed1ab_0
+  - ca-certificates=2021.10.8=h033912b_0
+  - cffi=1.15.0=py38h1a44b6c_0
+  - click=8.0.3=py38h50d1736_1
+  - dataclasses=0.8=pyhc8e2a94_3
+  - debugpy=1.5.1=py38ha048514_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - entrypoints=0.3=pyhd8ed1ab_1003
+  - executing=0.8.2=pyhd8ed1ab_0
+  - flit-core=3.6.0=pyhd8ed1ab_0
+  - importlib-metadata=4.10.1=py38h50d1736_0
+  - importlib_resources=5.4.0=pyhd8ed1ab_0
+  - ipykernel=6.7.0=py38h5fd9f69_0
+  - ipython=8.0.1=py38h50d1736_0
+  - ipython_genutils=0.2.0=py_1
+  - jedi=0.18.1=py38h50d1736_0
+  - jinja2=3.0.3=pyhd8ed1ab_0
+  - jsonschema=4.4.0=pyhd8ed1ab_0
+  - jupyter_client=7.1.2=pyhd8ed1ab_0
+  - jupyter_core=4.9.1=py38h50d1736_1
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - libcxx=12.0.1=habf9029_1
+  - libffi=3.4.2=h0d85af4_5
+  - libsodium=1.0.18=hbcb3906_1
+  - libzlib=1.2.11=h9173be1_1013
+  - markupsafe=2.0.1=py38h96a0964_1
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
+  - mistune=0.8.4=py38h96a0964_1005
+  - mypy_extensions=0.4.3=py38h50d1736_4
+  - nbclient=0.5.10=pyhd8ed1ab_1
+  - nbconvert=6.4.1=py38h50d1736_0
+  - nbformat=5.1.3=pyhd8ed1ab_0
+  - ncurses=6.3=he49afe7_0
+  - nest-asyncio=1.5.4=pyhd8ed1ab_0
+  - notebook=6.4.8=pyha770c72_0
+  - openssl=3.0.0=h0d85af4_2
+  - packaging=21.3=pyhd8ed1ab_0
+  - pandoc=2.17.0.1=h694c41f_1
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pathspec=0.9.0=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pip=21.3.1=pyhd8ed1ab_0
+  - platformdirs=2.3.0=pyhd8ed1ab_0
+  - prometheus_client=0.13.0=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.26=pyha770c72_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.11.2=pyhd8ed1ab_0
+  - pyparsing=3.0.7=pyhd8ed1ab_0
+  - pyrsistent=0.18.1=py38h96a0964_0
+  - python=3.8.12=h43ca1e7_2_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python_abi=3.8=2_cp38
+  - pyzmq=22.3.0=py38hd3b92b6_1
+  - readline=8.1=h05e3726_0
+  - send2trash=1.8.0=pyhd8ed1ab_0
+  - setuptools=60.5.0=py38h50d1736_0
+  - six=1.16.0=pyh6c4a22f_0
+  - sqlite=3.37.0=h23a322b_0
+  - stack_data=0.1.4=pyhd8ed1ab_0
+  - terminado=0.13.1=py38h50d1736_0
+  - testpath=0.5.0=pyhd8ed1ab_0
+  - tk=8.6.11=h5dbffcc_1
+  - tomli=1.2.2=pyhd8ed1ab_0
+  - tornado=6.1=py38h96a0964_2
+  - traitlets=5.1.1=pyhd8ed1ab_0
+  - typed-ast=1.5.2=py38h96a0964_0
+  - typing_extensions=4.0.1=pyha770c72_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - xz=5.2.5=haf1e3a3_1
+  - zeromq=4.3.4=he49afe7_1
+  - zipp=3.7.0=pyhd8ed1ab_0
+  - zlib=1.2.11=h9173be1_1013
+prefix: /Users/sungj4/miniconda3/envs/python_data_mistakes
 
