--- a/environment.yml
+++ b/environment.yml
@@ -5,19 +5,25 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - anyio=3.5.0=py38h50d1736_0
   - appnope=0.1.2=py38h50d1736_2
   - argon2-cffi=21.3.0=pyhd8ed1ab_0
   - argon2-cffi-bindings=21.2.0=py38h96a0964_1
   - asttokens=2.0.5=pyhd8ed1ab_0
   - attrs=21.4.0=pyhd8ed1ab_0
+  - babel=2.9.1=pyh44b312d_0
   - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - black=21.12b0=pyhd8ed1ab_0
   - bleach=4.1.0=pyhd8ed1ab_0
+  - brotlipy=0.7.0=py38h96a0964_1003
   - ca-certificates=2021.10.8=h033912b_0
+  - certifi=2021.10.8=py38h50d1736_1
   - cffi=1.15.0=py38h1a44b6c_0
+  - charset-normalizer=2.0.11=pyhd8ed1ab_0
   - click=8.0.3=py38h50d1736_1
+  - cryptography=36.0.1=py38h56c4533_0
   - dataclasses=0.8=pyhc8e2a94_3
   - debugpy=1.5.1=py38ha048514_0
   - decorator=5.1.1=pyhd8ed1ab_0
@@ -25,6 +31,7 @@ dependencies:
   - entrypoints=0.3=pyhd8ed1ab_1003
   - executing=0.8.2=pyhd8ed1ab_0
   - flit-core=3.6.0=pyhd8ed1ab_0
+  - idna=3.3=pyhd8ed1ab_0
   - importlib-metadata=4.10.1=py38h50d1736_0
   - importlib_resources=5.4.0=pyhd8ed1ab_0
   - ipykernel=6.7.0=py38h5fd9f69_0
@@ -32,10 +39,14 @@ dependencies:
   - ipython_genutils=0.2.0=py_1
   - jedi=0.18.1=py38h50d1736_0
   - jinja2=3.0.3=pyhd8ed1ab_0
+  - json5=0.9.5=pyh9f0ad1d_0
   - jsonschema=4.4.0=pyhd8ed1ab_0
   - jupyter_client=7.1.2=pyhd8ed1ab_0
   - jupyter_core=4.9.1=py38h50d1736_1
+  - jupyter_server=1.13.4=pyhd8ed1ab_0
+  - jupyterlab=3.2.8=pyhd8ed1ab_0
   - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - jupyterlab_server=2.10.3=pyhd8ed1ab_0
   - libcxx=12.0.1=habf9029_1
   - libffi=3.4.2=h0d85af4_5
   - libsodium=1.0.18=hbcb3906_1
@@ -44,13 +55,14 @@ dependencies:
   - matplotlib-inline=0.1.3=pyhd8ed1ab_0
   - mistune=0.8.4=py38h96a0964_1005
   - mypy_extensions=0.4.3=py38h50d1736_4
+  - nbclassic=0.3.5=pyhd8ed1ab_0
   - nbclient=0.5.10=pyhd8ed1ab_1
   - nbconvert=6.4.1=py38h50d1736_0
   - nbformat=5.1.3=pyhd8ed1ab_0
   - ncurses=6.3=he49afe7_0
   - nest-asyncio=1.5.4=pyhd8ed1ab_0
   - notebook=6.4.8=pyha770c72_0
-  - openssl=3.0.0=h0d85af4_2
+  - openssl=1.1.1l=h0d85af4_0
   - packaging=21.3=pyhd8ed1ab_0
   - pandoc=2.17.0.1=h694c41f_1
   - pandocfilters=1.5.0=pyhd8ed1ab_0
@@ -66,16 +78,21 @@ dependencies:
   - pure_eval=0.2.2=pyhd8ed1ab_0
   - pycparser=2.21=pyhd8ed1ab_0
   - pygments=2.11.2=pyhd8ed1ab_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_0
   - pyparsing=3.0.7=pyhd8ed1ab_0
   - pyrsistent=0.18.1=py38h96a0964_0
-  - python=3.8.12=h43ca1e7_2_cpython
+  - pysocks=1.7.1=py38h50d1736_4
+  - python=3.8.12=h17280f6_3_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python_abi=3.8=2_cp38
+  - pytz=2021.3=pyhd8ed1ab_0
   - pyzmq=22.3.0=py38hd3b92b6_1
   - readline=8.1=h05e3726_0
+  - requests=2.27.1=pyhd8ed1ab_0
   - send2trash=1.8.0=pyhd8ed1ab_0
   - setuptools=60.5.0=py38h50d1736_0
   - six=1.16.0=pyh6c4a22f_0
+  - sniffio=1.2.0=py38h50d1736_2
   - sqlite=3.37.0=h23a322b_0
   - stack_data=0.1.4=pyhd8ed1ab_0
   - terminado=0.13.1=py38h50d1736_0
@@ -86,8 +103,10 @@ dependencies:
   - traitlets=5.1.1=pyhd8ed1ab_0
   - typed-ast=1.5.2=py38h96a0964_0
   - typing_extensions=4.0.1=pyha770c72_0
+  - urllib3=1.26.8=pyhd8ed1ab_1
   - wcwidth=0.2.5=pyh9f0ad1d_2
   - webencodings=0.5.1=py_1
+  - websocket-client=1.2.3=pyhd8ed1ab_0
   - wheel=0.37.1=pyhd8ed1ab_0
   - xz=5.2.5=haf1e3a3_1
   - zeromq=4.3.4=he49afe7_1
